--- a/app/templates/category/categories.html
+++ b/app/templates/category/categories.html
@@ -3,32 +3,68 @@
 {% block title %}Liste des catégories{% endblock %}
 
 {% block content %}
-<div class="max-w-2xl mx-auto mt-10">
-    <h1 class="text-3xl font-bold mb-6 text-center">Liste des catégories</h1>
 
-    {% if categories %}
-    <ul class="space-y-2">
-        {% for id, name in categories %}
-        <li class="bg-base-200 p-4 rounded shadow flex items-center justify-between">
-            <span class="font-medium">{{ name }}</span>
-            <div class="space-x-2">
-                <a href="{{ url_for('update_category', id=id) }}" class="btn btn-sm btn-outline">Modifier</a>
-                <form method="POST" action="{{ url_for('delete_category', id=id) }}" class="inline"
-                    onsubmit="return confirm('Voulez-vous vraiment supprimer cette catégorie ?');">
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                    <button type="submit" class="btn btn-error btn-sm">Supprimer</button>
-                </form>
-            </div>
-        </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <div class="alert alert-info mt-4 text-center">
-        Aucune catégorie pour le moment.
-    </div>
-    {% endif %}
-    <div class="mt-6 text-center">
-        <a href="{{ url_for('create_category') }}" class="btn btn-primary">Créer une nouvelle catégorie</a>
+<div class="flex items-center justify-between mb-6">
+    <h1 class="text-3xl font-bold text-primary">🗃 Les Catégories</h1>
+    <a href="{{ url_for('create_category') }}" class="btn btn-outline btn-primary">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+        </svg>
+    </a>
+</div>
+
+{% if categories %}
+<div class="overflow-x-auto">
+    <div class="max-w-4xl mx-auto">
+        <table class="table w-full">
+            <!-- head -->
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for id, name in categories %}
+                <tr>
+                    <th></th>
+                    <td>{{ name }}</td>
+                    <td></td>
+                    <td>
+                        <a href="{{ url_for('update_category', id=id) }}" class="btn btn-sm btn-outline">Modifier</a>
+                        <form method="POST" action="{{ url_for('delete_category', id=id) }}" class="inline"
+                            onsubmit="return confirm('Voulez-vous vraiment supprimer cet auteur ?');">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                            <button type="submit" class="btn btn-square btn-sm btn-outline btn-error">
+                                <!-- icône poubelle -->
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 
+                                  19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 
+                                  5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 
+                                  .562c.34-.059.68-.114 1.022-.165m0 
+                                  0a48.11 48.11 0 0 1 3.478-.397m7.5 
+                                  0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 
+                                  0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 
+                                  0a48.667 48.667 0 0 0-7.5 0" />
+                                </svg>
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
+{% else %}
+<div class="alert alert-info mt-4 text-center">
+    <h3>Aucune catégorie pour le moment.</h3>
+</div>
+{% endif %}
+
+
 {% endblock %}
